--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "bebo-react": "^0.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   },
